--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@ Sarazin IT Systeme
 <span id="fourth">
       		<a href="../impressum.html">Impressum </a>  <a href="../disclaimer.html">Disclaimer</a>
 </span>
-github
 <p></p>
 <span id="fifth">
 <a href="https://www.xing.com/profile/Christian_Sarazin"><img src="button01.gif" border="0" alt="Xing"></a>
 </span>
+
+	<p>hosted with GitHub pages</p>
