--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <body>
 
-      		<a href="../impressum.html">Impressum </a>  <a href="../disclaimer.html">Disclaimer</a>
+      		<a href="http://sarazin.org/impressum.html">Impressum </a>  <a href="http://sarazin.org/disclaimer.html">Disclaimer</a>
