--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <body>
-<a href="http://sarazin.org/impressum.html">Impressum </a>  <a href="http://sarazin.org/disclaimer.html">Disclaimer</a>
+      <a href="http://sarazin.org/impressum.html">Impressum </a> <b></b> <a href="http://sarazin.org/disclaimer.html">Disclaimer</a>
       </body></html>
